[package]
name = "wizlight_rs"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.27.0"
features = ["full"]


[dependencies.indicatif]
version = "0.17.3"
features = ["improved_unicode", "rayon", "tokio"]


[dependencies]
pnet = "0.33.0"
color-eyre = "0.6.2"
rayon = "1.7.0"
human-panic = "1.1.3"


[dependencies.once_cell]
version = "1.17.1"
features = ["parking_lot"]

[dependencies.parking_lot]
version = "0.12.1"
features = ["send_guard", "serde"]


[dependencies.tracing]
version = "0.1.37"


[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["local-time", "time", "parking_lot"]


[dependencies.hashbrown]
version = "0.13.2"
features = ["rayon", "serde"]


[dependencies.serde]
version = "1.0.158"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.95"
features = ["preserve_order", "alloc", "unbounded_depth"]

[dependencies.socket2]
version = "0.5.1"